--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
+    "reselect": "^4.1.7",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.5.4",
     "workbox-broadcast-update": "^6.5.4",
